
[TestPrunePromptOutputSnapshot - 1]
stdout:
cmd.prune.header.unmanaged
❌ extra.jar

? cmd.prune.confirm cmd.init.prompt.confirm.suffix cmd.init.prompt.option.no.short
stderr:

---

[TestPrunePromptDisabledOutputSnapshot - 1]
stdout:
cmd.prune.header.unmanaged
❌ extra.jar

‼️ cmd.prune.error.unattended_refuse
cmd.prune.error.unattended_hint
stderr:

---

[TestPruneNonInteractiveOutputSnapshot - 1]
stdout:
❌ cmd.prune.unmanaged.entry, Arg 1: {Count: 0, Data: &map[file:/cfg/mods/extra.jar]}
stderr:
cmd.prune.error.prompt_disabled
---

[TestPruneUnattendedOutputSnapshot - 1]
stdout:
cmd.prune.header.unmanaged
❌ extra.jar

‼️ cmd.prune.error.unattended_refuse
cmd.prune.error.unattended_hint
stderr:

---

[TestPruneForceOutputSnapshot - 1]
stdout:
cmd.prune.header.deleted
✅ extra.jar

✅ cmd.prune.summary.success
cmd.prune.summary.success_hint
stderr:

---

[TestPruneForceDeleteFailedOutputSnapshot - 1]
stdout:
cmd.prune.header.deleting
❌ extra.jar cmd.prune.item.delete_failed, Arg 1: {Count: 0, Data: &map[reason:delete failed]}

‼️ cmd.prune.summary.incomplete
cmd.prune.summary.incomplete_hint
stderr:

---

[TestPruneQuietOutputSnapshot - 1]
stdout:
cmd.prune.header.unmanaged
❌ extra.jar
stderr:

---

[TestPruneConfirmDeleteOutputSnapshot - 1]
stdout:
cmd.prune.header.deleted
✅ extra.jar

✅ cmd.prune.summary.success
cmd.prune.summary.success_hint
stderr:

---
